--- a/style.css
+++ b/style.css
@@ -4,17 +4,21 @@ li {
   }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Source+Sans+Pro", sans-serif;
+    font-size: 300;
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Source+Sans+Pro", sans-serif;
+    font-size: 100;
 }
 
 h3 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Source+Sans+Pro", sans-serif;
+    font-size: 100;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Source+Sans+Pro", sans-serif;
+    font-size: 100;
 }
