--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ h3 {
     font-size: 100;
 }
 
+h4 {
+  font-family: "Source+Sans+Pro", sans-serif;
+  font-size: 100;
+}
+
 p {
     font-family: "Source+Sans+Pro", sans-serif;
     font-size: 100;
