--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@ html {
     font: 'Lucida Console';
     font-size: 18px;
 }
+
+.top {
+    margin-top: 80px;
+}
+
+.tui-window {
+    max-width: 720px;
+    text-align: left;
+}
