--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background: linear-gradient(315deg, rgba(193,0,176,1) 0%, rgba(119,0,122,1) 29%, rgba(0,224,255,1) 100%);
+    background: linear-gradient(315deg, rgba(193,0,176,1), rgba(104,34,179,1) 100%);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
